# 20252R0136DATA30400

./: .gitignore  README.md  README_LLM.md  analyze_candidates.py  analyze_class_distribution.py  analyze_core_classes.py  analyze_hierarchy_levels.py  analyze_level0_decisions.py  analyze_level0_distribution.py  analyze_level0_ratios.py  analyze_nli_scores.py  analyze_pseudo_distribution.py  analyze_score_drops.py  check_hierarchy_debug.py  class_distribution_report.txt  compare_versions.py  evaluate_core_classes.py  evaluate_pseudo_labels.py  ground_truth_100samples.json  ground_truth_150samples.json  ground_truth_50samples.json  level0_distribution.py  main.py  predict_submission.py  pyproject.toml  regenerate_scaled.py  retrain_final.py  run_llm_refinement.py  run_llm_refinement_empty.py  verify_core_selection.py  verify_limited.py  verify_mapping.py  verify_mapping_mismatch.py  verify_masking.py
Readings/: Leveraging Relations 2a3219822b508036a8d2c658fd65fae5.md  TaxoClass: Hierarchical Multi-Label Text Classification Using Only Class Names.md  Text Classification 29b219822b5080e7a1c8cfc9b3bd1aef.html  final_project_llm.md
checkpoints/: ambiguous_doc_ids.json  core_classes.json  core_classes_llm_refined.json  llm_decisions.json  llm_refinement_checkpoint.json  pseudo_labels_iter1.json  pseudo_labels_iter2.json  pseudo_labels_test.json  pseudo_labels_test_iter2.json  pseudo_labels_test_iter3.json  taxoclass_model.pth  warmup_epoch_40.pth
checkpoints_final/: pseudo_labels_test_final.json
llm_data_generation/: 1_select_classes.py  2_generate_reviews.py  5_predict.py  (+7 more)
(+8 files in other folders)
